# ThreadsExperiment

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md
cmake/: ExternalLib.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
src/: main.c
test/: CMakeLists.txt
